# swagger.yaml
@@ -1,32 +1,32 @@
 tags:
-- name: users
-  description: users API
+- name: videos
+  description: videos API
 
 paths:
-# [GET] users
-  /users:
+# [GET] videos
+  /api/v1/videos:
     get:
       tags:
-      - users
-      summary: Find All Users
+      - videos
+      summary: Find All Videos
       responses:
         200:
           description: 'OK'
         500:
           description: 'Server Error'
 
-# [POST] users
+# [POST] videos
     post:
       tags:
-      - users
-      summary: Add User
+      - videos
+      summary: Add Video
       parameters:
       - name: body
         in: body
-        description: user Data
+        description: video Data
         required: true
         schema:
-          $ref: '#/definitions/users'
+          $ref: '#/definitions/videos'
       responses:
         201:
           description: 'Created'
@@ -37,16 +37,16 @@ paths:
         500:
           description: 'Server Error'
 
-# [GET] users/id
-  /users/{id}:
+# [GET] videos/id
+  /api/v1/videos/{id}:
     get:
       tags:
-      - users
-      summary: Find User By Id
+      - videos
+      summary: Find Video By Id
       parameters:
       - name: id
         in: path
-        description: User Id
+        description: Video Id
         required: true
       responses:
         200:
@@ -56,22 +56,22 @@ paths:
         500:
           description: 'Server Error'
 
-# [PUT] users/id
+# [PUT] videos/id
     put:
       tags:
-      - users
-      summary: Update User By Id
+      - videos
+      summary: Update Video By Id
       parameters:
       - name: id
         in: path
-        description: user Id
+        description: video Id
         required: true
       - name: body
         in: body
-        description: user Data
+        description: video Data
         required: true
         schema:
-          $ref: '#/definitions/users'
+          $ref: '#/definitions/videos'
       responses:
         200:
           description: 'OK'
@@ -82,15 +82,15 @@ paths:
         500:
           description: 'Server Error'
 
-# [DELETE] users/id
+# [DELETE] videos/id
     delete:
       tags:
-      - users
-      summary: Delete User By Id
+      - videos
+      summary: Delete Video By Id
       parameters:
       - name: id
         in: path
-        description: user Id
+        description: video Id
         required: true
       responses:
         200:
@@ -102,18 +102,30 @@ paths:
 
 # definitions
 definitions:
-  users:
+  videos:
     type: object
     required:
-        - email
-        - password
+        - title
+        - url
+        - accessType
+        - size
+        - ownerId
     properties:
-      email:
+      title:
         type: string
-        description: user Email
-      password:
+        description: video title
+      url:
         type: string
-        description: user Password
+        description: video url
+      accessType:
+        type: boolean
+        description: video access
+      size:
+        type: number
+        description: video size
+      ownerId:
+        type: string
+        description: video owner id
 
 schemes:
  - https
